# langdb-samples

./: .gitignore  .gitmodules  README.md  crewai_flow.html  notebooks_info.json  process_notebooks.py  pyproject.toml
agents/: CRAG.ipynb  Combining Insights from Structured and Unstructured Data.ipynb  PDF extraction & RAG using LangDB.ipynb  Productionize_PDF_Search.ipynb  QA on PDF & RAG using LangDB.ipynb  Sentiment Analysis Part 1.ipynb  Sentiment Analysis Part 2.ipynb  Sentinment Analysis Part 1.ipynb  Sentinment Analysis Part 2.ipynb  Strucutured Layout Extraction from PDFs and Images.ipynb  combine-structured-with-unstructured.sql  generate_notebook.ipynb  pdf-finance.sql  pdf-rag.sql
examples/: basic.py
getting_started/: PDF extraction & RAG using LangDB.ipynb  Query Agent.ipynb  RAG Creation using Postgres.ipynb  Running Text-To-SQL on MongoDB: Working with Postgres, MySQL, MongoDB and Others.ipynb  Sentiment Analysis Part 1.ipynb  Sentiment Analysis Part 2.ipynb  Structured Layout Extraction from PDFs and Images.ipynb  Text-to-SQL.ipynb  Using Providers.ipynb  Working with Postgres, MySQL, MongoDB, and Others.ipynb
learn/: embeddings.ipynb  loading_data.ipynb  models.ipynb  prompts.ipynb
learn_examples/: embeddings.ipynb  endpoints.ipynb  loading_data.ipynb  models.ipynb  prompts.ipynb
rag/: Building a HR assistant using LLMs.ipynb  CRAG.ipynb  Combining Insights from Structured and Unstructured Data Using PostgreSQL.ipynb  Combining Insights from Structured and Unstructured Data using LangDB.ipynb  QA on PDF & RAG using LangDB.ipynb  pdf-finance.sql  (+3 more)
(+46 files in other folders)
