[tool.poetry]
name = "langdb-samples"
version = "0.1.0"
description = ""
authors = ["VG <vivek@langdb.ai>"]
license = "MIT"
readme = "README.md"
packages = [{include = "langdb_samples"}]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
